# ECE4951Project

./: .gitignore  ECE4951  ECE4951.cpp
src/: CMakeCache.txt  CMakeLists.txt  ECE4951  ECE4951.cpp  FunctionCall.txt  Makefile  MikeFunctions.h  cmake_install.cmake  mySquares.cpp  myWhiteLines.cpp  nessFunctions.h  spotExtractor.h
